crates/typestate-pipeline/tests/ui/factory_async_without_setter.stderr
error: `async_fn` is only valid alongside `setter = <fn>`
       = help: `async_fn` describes the setter transformer's shape — add `setter = <fn>` (the `async fn`) or remove `async_fn`
 --> tests/ui/factory_async_without_setter.rs:5:23
  |
5 |     #[field(required, async_fn)]
  |                       ^^^^^^^^
